--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/expect": "^24.3.0",
+    "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
-    "expect": "^26.6.2",
+    "chai": "^4.3.0",
     "mocha": "^8.3.0",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
