--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "test": "mocha \"./**/*.spec.ts\"",
     "test:watch": "npm run test -- --watch",
     "tslint": "tslint --project tsconfig.json"
@@ -13,10 +16,26 @@
   "devDependencies": {
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "chai": "^4.3.0",
     "mocha": "^8.3.0",
+    "sass": "^1.32.8",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
+    "tslint-react": "^5.0.0",
     "typescript": "^4.2.2"
+  },
+  "dependencies": {
+    "clsx": "^1.1.1",
+    "@emotion/cache": "^11.1.3",
+    "@emotion/react": "^11.1.5",
+    "@emotion/server": "^11.0.0",
+    "@emotion/styled": "^11.1.5",
+    "@material-ui/core": "^4.11.3",
+    "next": "^10.0.7",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
