--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4005",
     "build": "next build",
     "start": "next start",
     "test": "mocha \"./**/*.spec.ts\"",
@@ -17,6 +17,7 @@
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
     "@types/node": "^14.14.31",
+    "@types/node-fetch": "^2.5.8",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "chai": "^4.3.0",
@@ -28,13 +29,15 @@
     "typescript": "^4.2.2"
   },
   "dependencies": {
-    "clsx": "^1.1.1",
     "@emotion/cache": "^11.1.3",
     "@emotion/react": "^11.1.5",
     "@emotion/server": "^11.0.0",
     "@emotion/styled": "^11.1.5",
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "clsx": "^1.1.1",
     "next": "^10.0.7",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
