--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
+    "@types/next-auth": "^3.7.1",
     "@types/node": "^14.14.31",
     "@types/node-fetch": "^2.5.8",
     "@types/react": "^17.0.2",
@@ -36,7 +37,9 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "clsx": "^1.1.1",
+    "mongodb": "^3.6.4",
     "next": "^10.0.7",
+    "next-auth": "^3.11.2",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
